# plugin-play

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build-macos.yml
Source/: Main.cpp  Theme.cpp  Theme.h
Source/Audio/: AppRouting.cpp  AppRouting.h  AudioEngine.cpp  AudioEngine.h  LoopbackCapture.cpp  LoopbackCapture.h  MasterProcessor.h  MonitorOutput.cpp  MonitorOutput.h  PluginNode.h  ProcessTap.h  ProcessTap.mm  WasapiEndpoints.cpp  WasapiEndpoints.h
Source/Plugins/: OutOfProcessScanner.cpp  OutOfProcessScanner.h  PluginScanner.cpp  PluginScanner.h
Source/Setup/: BlackHole.cpp  BlackHole.h  UpdateCheck.cpp  UpdateCheck.h  VirtualCable.cpp  VirtualCable.h
Source/UI/: ChainView.cpp  ChainView.h  InputSourcePicker.cpp  InputSourcePicker.h  MainComponent.cpp  MainComponent.h  PluginPicker.cpp  PluginPicker.h  PluginWindow.h  SupportPanel.cpp  SupportPanel.h  WelcomePopup.cpp  WelcomePopup.h
docs/: PLAN.md
experiments/process-loopback/: README.md  asio_probe.cpp  build.ps1  build_asio.ps1  build_extras.ps1  list_sources.cpp  loopback_test.cpp  player.ps1  quality_test.cpp  run_test.ps1
installer/: PluginPlay.iss  README.md
packaging/macos/: PluginPlay.entitlements
